2010-03-22  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_utils.c (ol_path_is_file): CHANGE: Comment out the annoying ol_path_is_file log

	* src/ol_trayicon.c (activate): ADD: Show/Hide Lyrics when click the tray icon

2010-03-16  Tiger Soldier  <tigersoldi@gmail.com>

	* ADD: Display player icons in notification and tray icon
	* ADD: Path of icons for Audacious, Amarok 2, Banshee, Exaile 0.3, MPD, Quod Libet, Rhythmbox, Songbird, XMMS2

	* src/ol_utils.c: CHANGE: Move ol_path_is_file from ol_path_pattern.[ch] to ol_utils.[ch]

	* src/ol_player.h: CHANGE: Change the type OlPlayerController to struct OlPlayer to reduce dependency of ol_player.h
	* src/ol_osd_window.c (ol_osd_window_unrealize): FIX: Memory leak due to the event_window of OSD Window is not unrefed on destroy
	FIX: realize osd_window with proper size
	FIX: alignments of OSD Window will be calculated properly when the window is moved

	* src/ol_osd_module.c (ol_osd_module_init_osd): FIX: We don't have to g_object_ref_sink to OSD Window any longer

2010-03-15  Tiger Soldier  <tigersoldi@gmail.com>

	* configure.ac: CHANGE: Do not stop autoconf if xmms2 or mpd library is missing

2010-03-14  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_window.c: CHANGE: The base class of OSD Window is changed to GtkWindow to avoid crashing on hiding child widgets
	CHANGE: Hide lyric window of OSD Window if lyrics are all empty. OSD Module doesn't hide OSD Window on empty lyrics any longer
	(ol_osd_window_update_shape): FIX: Set shape mask to osd_window instead of bg_window in OSD Window

	* src/ol_main.c (INFO_INTERVAL): CHANGE: The interval to refresh status of player is set to 500ms

	* src/ol_osd_toolbar.c: CHANGE: Set the alignment of OSD toolbar to center
	ADD: Hide play/pause button of OSD Toolbar when status changed

2010-03-13  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_window.c: CHANGE: Event window of OSD Window is back :)
